<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuzzActivity">

    <TextView
        android:id="@+id/tv_buzz__title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ctitle"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_buzz__A"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/A"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_buzz__title" />

    <Button
        android:id="@+id/bt_buzz__B"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:text="@string/B"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_buzz__title" />

    <Button
        android:id="@+id/bt_buzz__C"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/C"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_buzz__D"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_buzz__A"
        app:layout_constraintVertical_bias="0.447" />

    <Button
        android:id="@+id/bt_buzz__D"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/D"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_buzz__B"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/tv_buzz__cq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_buzz__title" />
</androidx.constraintlayout.widget.ConstraintLayout>